--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             background-color: antiquewhite;
             color: darkslategrey;
         }
+        h1{
+            text-align: center;
+        }
     </style>
     <a href="./portfolio.html" target="_blank" rel="noopener noreferrer"></a>
 </head>
