--- a/index.html
+++ b/index.html
@@ -1,48 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipkart app</title>
+    <title>Document</title>
     <style>
-        #container{
-            background-color: antiquewhite;
-            color: darkslategrey;
+        body {
+            background-color: black;
         }
-        h1{
+
+        nav {
+            background-color:#e0e70d ;
+            color:black;
+            height: 100px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            align-items: center;
+            font-size: larger;
+            margin-bottom: 10px;
+        }
+
+        #container1 {
+            height: 400px;
+            width: 100%;
+            background-color: aqua;
+            background-image: url(https://img.freepik.com/free-photo/modern-background-with-lines_1361-3533.jpg);
+            background-size: 100% 400px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        #box1 {
+            height: 300px;
+            width: 600px;
+
+            color: whitesmoke;
+            border-radius: 10%;
             text-align: center;
         }
-        h5{
-            background-color:grey;
+
+        #box2 {
+            height: 300px;
+            width: 300px;
+            background-color: brown;
+            background-image: url(./img/passport.jpg);
+            background-size: 300px 300px;
+            margin-left: 100px;
+            border-radius: 50%;
+            background-repeat: no-repeat;
+        }
+
+        #container2 {
+            height: 60px;
+            width: 100%;
+            color: whitesmoke;
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEPfvypwqimgu7Q_AgmRV5dnTLanjnkO8fzwZevr_1-r5XM-kT--_xUToU0IV0zJodCAk&usqp=CAU);
+            background-size: 100% 60px;
+            background-repeat: no-repeat;
+            margin-top: 10px;
+
+        }
+
+        #container3 {
+            height: 400px;
+            width: 100%;
+            background-color:#1b1e1f;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        #box3 {
+            height: 300px;
+            width: 400px;
+            background-color:#fbff67;
+            color: black;
+            font-size: medium;
+            text-align: justify;
+            padding: 20px;
+            border-radius: 25%;
+        }
+
+        #box4 {
+            height: 300px;
+            width: 400px;
+            background-color:#fbff67;
+            color: black;
+            font-size: medium;
+            text-align: justify;
+            padding: 20px;
+            border-radius: 25%;
+        }
+        #skills{
+            height: 100px;
+            width: 100%;
+            background-color: #e0e70d;
+            color: black;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 10px;
         }
     </style>
-    <a href="./portfolio.html" target="_blank" rel="noopener noreferrer"></a>
 </head>
+
 <body>
-    <div id="container">
-        <h1>Portfolio</h1>
-        <h2>G Kaushik</h2>
-        <h3>B.E CSE(AIML) 2025 YOP</h3>
-        <h3>Rao Bahadur Y Mahabaleshwarappa Engineering Collage</h3>
-        <ol><b>Skills</b>
-        <li>Java</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        </ol>
-        <h4>Project Details</h4>
-        <h5>1.Carrier path and skill development platform :</h5>
-        <p>The Career Path and Skill Mapping Development Platform is a web-based application 
-            designed to guide users in selecting the most suitable career paths based on their skills and interests. The 
-            front end is built using React.js, ensuring a dynamic and interactive user experience. The backend leverages 
-            a Random Forest Classifier machine learning algorithm to analyze user inputs and provide accurate career 
-            recommendations. This platform helps individuals make informed career decisions by mapping their skills 
-            to relevant job roles.</p>
-        <h5>2.Agriculture Management System :</h5>
-        <p> Agricultural Management System is an online web application where buyers can go through 
-            the list of products uploaded by the farmer and can add to their cart or buy the required product directly. 
-            Both farmers and buyers need to login separately using their own user id and password. And the buyer can 
-            place their items into a cart and can purchase it. This application is developed using HTML, CSS, and 
-            MYSQL programming language.</p>
+    <header>
+        <nav>
+            <h1>Portfolio</h1>
+        </nav>
+    </header>
+    <div id="container1">
+        <div id="box1">
+            <h1>Hi!!! , I Am</h1>
+            <h1>G KAUSHIK</h1>
+            <h3>g.kaushik71728@gmail.com</h3>
+            <p>Rao Bahadur Y. Mahabaleswarappa Engineering College</p>
+            <p>B.E in CSE(AIML)</p>
+            <p><a href="https://www.linkedin.com/in/g-kaushik-407600257/" target="_blank">Linkedin</a></p>
+
+        </div>
+        <div id="box2">
+
+
+        </div>
+
     </div>
+    <div id="skills">
+        <div>
+            <h1>Skills :</h1>
+        </div>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYk594AhSKw5Eb3iHkPHs_XmpCqaRVgu0mvg&s" alt="html" height="80px" width="80px" >
+        </div>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrxhwg_X-XpKv5p4iXbwtEoUlkqQAkzJ1zsKqShwZkNhAkFcahVitQ8ydOKpGfbYCjshg&usqp=CAU" alt="css" height="80px" width="80px">
+
+        </div>
+        <div>
+            <img src="https://thumbs.dreamstime.com/b/javascript-logo-editorial-illustrative-white-background-eps-download-vector-jpeg-banner-javascript-logo-editorial-illustrative-208329459.jpg" alt="js" height="80px" width="80px">
+        </div>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkCCdLCDhY7mwKXP4bHVQ1SFZxn3pPM2QLFw&s" alt="java" height="80px" width="80px">
+        </div>
+    </div>
+    <div id="container2">
+        <h1>Project Details:</h1>
+    </div>
+    <div id="container3">
+        <div id="box3">
+            <h1>Carrer Path And Skill Mapping Development </h1>
+            <p>The Career Path and Skill Mapping Development Platform is a web-based application
+                designed to guide users in selecting the most suitable career paths based on their skills and interests.
+                The
+                front end is built using React.js, ensuring a dynamic and interactive user experience.The backend leverages 
+                a Random Forest Classifier machine learning algorithm to analyze user inputs and provide accurate career 
+                recommendations. This platform helps individuals make informed career decisions by their skills 
+                to relevant job roles. </p>
+        </div>
+        <div id="box4">
+            <h1>Agriculture Management System </h1>
+            <p>The Career Path and Skill Mapping Development Platform is a web-based application 
+                designed to guide users in selecting the most suitable career paths based on their skills and interests. The 
+                front end is built using React.js, ensuring a dynamic and interactive user experience.. And the buyer can 
+                place their items into a cart and can purchase it. This application is developed using HTML, CSS, and 
+                MYSQL programming language.  </p>
+
+        </div>
+    </div>
+    
 </body>
+
 </html>
