--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         }
 
         nav {
-            background-color:#e0e70d ;
-            color:black;
+            background-color: #e0e70d;
+            color: black;
             height: 100px;
             width: 100%;
             display: flex;
@@ -68,7 +68,7 @@
         #container3 {
             height: 400px;
             width: 100%;
-            background-color:#1b1e1f;
+            background-color: #1b1e1f;
             display: flex;
             justify-content: space-around;
             align-items: center;
@@ -78,7 +78,7 @@
         #box3 {
             height: 300px;
             width: 400px;
-            background-color:#fbff67;
+            background-color: #fbff67;
             color: black;
             font-size: medium;
             text-align: justify;
@@ -89,14 +89,15 @@
         #box4 {
             height: 300px;
             width: 400px;
-            background-color:#fbff67;
+            background-color: #fbff67;
             color: black;
             font-size: medium;
             text-align: justify;
             padding: 20px;
             border-radius: 25%;
         }
-        #skills{
+
+        #skills {
             height: 100px;
             width: 100%;
             background-color: #e0e70d;
@@ -105,6 +106,14 @@
             justify-content: space-around;
             align-items: center;
             margin-top: 10px;
+        }
+        #container4{
+            height: 150px;
+            width: 100%;
+            background-color: #e0e70d;
+            color: black;
+            align-items: center;
+            text-align: justify;
         }
     </style>
 </head>
@@ -136,17 +145,21 @@
             <h1>Skills :</h1>
         </div>
         <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYk594AhSKw5Eb3iHkPHs_XmpCqaRVgu0mvg&s" alt="html" height="80px" width="80px" >
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYk594AhSKw5Eb3iHkPHs_XmpCqaRVgu0mvg&s"
+                alt="html" height="80px" width="80px">
         </div>
         <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrxhwg_X-XpKv5p4iXbwtEoUlkqQAkzJ1zsKqShwZkNhAkFcahVitQ8ydOKpGfbYCjshg&usqp=CAU" alt="css" height="80px" width="80px">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrxhwg_X-XpKv5p4iXbwtEoUlkqQAkzJ1zsKqShwZkNhAkFcahVitQ8ydOKpGfbYCjshg&usqp=CAU"
+                alt="css" height="80px" width="80px">
 
         </div>
         <div>
-            <img src="https://thumbs.dreamstime.com/b/javascript-logo-editorial-illustrative-white-background-eps-download-vector-jpeg-banner-javascript-logo-editorial-illustrative-208329459.jpg" alt="js" height="80px" width="80px">
+            <img src="https://thumbs.dreamstime.com/b/javascript-logo-editorial-illustrative-white-background-eps-download-vector-jpeg-banner-javascript-logo-editorial-illustrative-208329459.jpg"
+                alt="js" height="80px" width="80px">
         </div>
         <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkCCdLCDhY7mwKXP4bHVQ1SFZxn3pPM2QLFw&s" alt="java" height="80px" width="80px">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkCCdLCDhY7mwKXP4bHVQ1SFZxn3pPM2QLFw&s"
+                alt="java" height="80px" width="80px">
         </div>
     </div>
     <div id="container2">
@@ -158,22 +171,32 @@
             <p>The Career Path and Skill Mapping Development Platform is a web-based application
                 designed to guide users in selecting the most suitable career paths based on their skills and interests.
                 The
-                front end is built using React.js, ensuring a dynamic and interactive user experience.The backend leverages 
-                a Random Forest Classifier machine learning algorithm to analyze user inputs and provide accurate career 
-                recommendations. This platform helps individuals make informed career decisions by their skills 
+                front end is built using React.js, ensuring a dynamic and interactive user experience.The backend
+                leverages
+                a Random Forest Classifier machine learning algorithm to analyze user inputs and provide accurate career
+                recommendations. This platform helps individuals make informed career decisions by their skills
                 to relevant job roles. </p>
         </div>
         <div id="box4">
             <h1>Agriculture Management System </h1>
-            <p>The Career Path and Skill Mapping Development Platform is a web-based application 
-                designed to guide users in selecting the most suitable career paths based on their skills and interests. The 
-                front end is built using React.js, ensuring a dynamic and interactive user experience.. And the buyer can 
-                place their items into a cart and can purchase it. This application is developed using HTML, CSS, and 
-                MYSQL programming language.  </p>
+            <p>The Career Path and Skill Mapping Development Platform is a web-based application
+                designed to guide users in selecting the most suitable career paths based on their skills and interests.
+                The
+                front end is built using React.js, ensuring a dynamic and interactive user experience.. And the buyer
+                can
+                place their items into a cart and can purchase it. This application is developed using HTML, CSS, and
+                MYSQL programming language. </p>
 
         </div>
     </div>
-    
+    <div id="container4">
+        <h3>About me :</h3>
+        <p>
+            Hi! I'm a passionate and detail-oriented web developer with a strong foundation in both frontend and backend
+            technologies. I recently and have worked on several exciting projects, including Carrier Path and Skill Mapping Development and Agriculture Management SystemI enjoy building user-friendly, responsive websites . My tech stack includes, HTML, CSS, JavaScript, and Java . I'm currently seeking opportunities to grow as a developer and contribute to impactful projects in web
+            development.
+        </p>
+    </div>
 </body>
 
 </html>
